--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cpu150.randomusers">
+<manifest
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        package="com.example.cpu150.randomusers">
 
     <application
         android:allowBackup="true"
@@ -10,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity">
+
+        <activity
+            android:name=".activities.MainActivity"
+            android:theme="@style/AppTheme.SplashTheme">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
@@ -28,7 +32,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.HomePageActivity"></activity>
-    </application>
 
+        <activity android:name=".activities.HomePageActivity" />
+    </application>
 </manifest>
