--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,18 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:allowBackup="true"
-        android:fullBackupContent="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+            android:name="RandomUsersApplication"
+            android:allowBackup="true"
+            android:fullBackupContent="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
 
         <activity
-            android:name=".activities.MainActivity"
-            android:theme="@style/AppTheme.SplashTheme">
+                android:name=".activities.MainActivity"
+                android:theme="@style/AppTheme.SplashTheme">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
@@ -24,9 +25,9 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data
-                    android:host="example.com"
-                    android:pathPattern="/.*"
-                    android:scheme="https" />
+                        android:host="example.com"
+                        android:pathPattern="/.*"
+                        android:scheme="https" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
