--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,10 @@
+plugins {
+    id("net.ltgt.apt") version "0.19"
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -47,6 +52,10 @@ dependencies {
     // RxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
+    // Dagger
+    implementation 'com.google.dagger:dagger:2.14.1'
+    kapt 'com.google.dagger:dagger-compiler:2.14.1'
 
     // Unit Test
     testImplementation 'junit:junit:4.12'
